Add Quantum Trigger v1.0 — color-coded intent surface

--- a/index.html
+++ b/index.html
@@ -233,5 +233,6 @@ document.querySelectorAll(".action-btn").forEach(function(btn){
 </script>
 
 <script defer src="https://pewpi-infinity.github.io/infinity-crown-index/js/infinity-emoji-logic.js"></script>
+<script defer src="https://pewpi-infinity.github.io/infinity-crown-index/js/quantum-trigger.js"></script>
 </body>
 </html>
